--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container center-block">
         <h1><a href="/"><img alt="Let's Get Coding" src="img/logo.png" width="165" height="80"></a></h1>
         <h2>Before school coding courses for primary school kids.</h2>
-        <p>We teach Australian primary school students in Years 3 to 6 how to code, laying the foundations for them to build their own websites and mobile apps.</p>
+        <p class="lead">We teach Australian primary school students in Years 3 to 6 how to code, laying the foundations for them to build their own websites and mobile apps.</p>
         <img class="img-responsive" alt="Australian primary school kids" src="img/kids.jpg" width="600" height="350"> </div>
     </header>
     <section id="quotes">
@@ -123,7 +123,7 @@
     <section id="register">
       <div class="container">
         <h3>Register your interest.</h3>
-        <p class="lead">Are you interested in getting Let's Get Coding to run coding courses at your school? <br> Fill in the form below and we'll let you know when we're coming to your school.</p>
+        <p class="lead">Are you interested in having Let's Get Coding run coding courses at your school? <br> Fill in the form below and we'll let you know when we're coming to your school.</p>
         <hr>
         <form class="center-block" role="form" action="#" method="post">
           <div class="form-group">
