Form follows function

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </header>
     <section id="quotes">
       <div class="container center-block">
+        <h3 class="sr-only">Why our kids must learn to code.</h3>
         <div id="carousel-quotes" class="carousel slide" data-ride="carousel" data-interval="7000"> 
           <ol class="carousel-indicators">
             <li data-target="#carousel-quotes" data-slide-to="0" class="active"></li>
@@ -123,42 +124,9 @@
     <section id="register">
       <div class="container">
         <h3>Register your interest.</h3>
-        <p class="lead">Are you interested in having Let's Get Coding run coding courses at your school? <br> Fill in the form below and we'll let you know when we're coming to your school.</p>
+        <p class="lead">Are you interested in having Let's Get Coding run coding courses at your school? <br> Fill in the form below and we'll get right back to you with more information on how we can get started.</p>
         <hr>
-        <form class="center-block" role="form" action="#" method="post">
-          <div class="form-group">
-            <label class="radio-inline">
-              <input type="radio" name="source" value="Parent" checked> Parent
-            </label>
-            <label class="radio-inline">
-              <input type="radio" name="source" value="Principal"> Principal
-            </label>
-            <label class="radio-inline">
-              <input type="radio" name="source" value="Teacher"> Teacher
-            </label>
-            <label class="radio-inline">
-              <input type="radio" name="source" value="Other"> Other
-            </label>
-          </div>
-          <div class="form-group">
-            <label for="school" class="sr-only">Your school name</label>
-            <input type="text" name="school" class="form-control" id="school" placeholder="School name">
-          </div>
-          <div class="form-group">
-            <label for="name" class="sr-only">Your name</label>
-            <input type="text" name="name" class="form-control" id="name" placeholder="Your name">
-          </div>
-          <div class="form-group">
-            <label for="email" class="sr-only">Your email address</label>
-            <input type="email" name="email" class="form-control" id="email" placeholder="Your email address">
-          </div>
-          <div class="form-group">
-            <label for="child" class="sr-only">Your child's name</label>
-            <span class="help-block">If you're a parent, let us know your child's name. If you have more than one child, just fill in and submit the form for each child.</span>
-            <input type="text" name="child" class="form-control" id="child" placeholder="Your child's name">
-          </div>
-          <input type="submit" value="Submit" class="btn btn-default">
-        </form>
+        <iframe class="center-block" width="440px" height="460" src="thanks.html" frameborder="0" scrolling="no"></iframe>
       </div>
     </section>
     <footer>
