--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <h3>Register your interest.</h3>
         <p class="lead">Are you interested in having Let's Get Coding run coding courses at your school? <br> Fill in the form below and we'll get right back to you with more information on how we can get started.</p>
         <hr>
-        <iframe class="center-block" width="440px" height="460" src="thanks.html" frameborder="0" scrolling="no"></iframe>
+        <iframe class="center-block" width="440px" height="460" src="form.html" frameborder="0" scrolling="no"></iframe>
       </div>
     </section>
     <footer>
