Changed address target from Work to Other

--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
   <body>
     <form name="insightly_web_to_contact" class="center-block" id="form" role="form" action="https://letsgetcoding.insight.ly/WebToContact/Create" method="post">
       <input type="hidden" name="formId" value="KqeV7VhwKfbaddnpRiXTvQ==">
-      <input type="hidden" name="addresses[0].AddressType" value="Work">
+      <input type="hidden" name="addresses[0].AddressType" value="Other">
       <input type="hidden" name="addresses[0].Street" value="">
       <input type="hidden" name="addresses[0].PostalCode" value="">
       <input type="hidden" name="addresses[0].Country" value="Australia">
