--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </section>
     <footer>
       <div class="container">
-        <ul class="list-inline">
+        <!--ul class="list-inline">
           <li><a class="text-muted" href="https://www.facebook.com/LetsGetCoding" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
           <li><a class="text-muted" href="https://github.com/LetsGetCoding" target="_blank"><i class="fa fa-github-square fa-2x"></i></a></li>
           <li><a class="text-muted" href="https://plus.google.com/u/0/b/116511701061749312312/116511701061749312312" target="_blank"><i class="fa fa-google-plus-square fa-2x"></i></a></li>
@@ -140,7 +140,7 @@
           <li><a class="text-muted" href="https://twitter.com/LetsGetCoding" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></li>
           <li><a class="text-muted" href="https://vimeo.com/LetsGetCoding" target="_blank"><i class="fa fa-vimeo-square fa-2x"></i></a></li>
           <li><a class="text-muted" href="http://www.youtube.com/user/LetsGetCoding" target="_blank"><i class="fa fa-youtube-square fa-2x"></i></a></li>
-        </ul>
+        </ul-->
         <p><small>&copy; 2014 Let's Get Coding.</small></p>
       </div>
     </footer>
