--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="quotes">
       <div class="container center-block">
         <h3 class="sr-only">Why our kids must learn to code.</h3>
-        <div id="carousel-quotes" class="carousel slide" data-ride="carousel" data-interval="7000"> 
+        <div id="carousel-quotes" class="carousel slide" data-ride="carousel" data-interval="7000">
           <ol class="carousel-indicators">
             <li data-target="#carousel-quotes" data-slide-to="0" class="active"></li>
             <li data-target="#carousel-quotes" data-slide-to="1"></li>
@@ -121,14 +121,14 @@
         </div>
       </div>
     </section>
-    <section id="register">
+    <!-- <section id="register">
       <div class="container">
         <h3>Register your interest.</h3>
         <p class="lead">Are you interested in having Let's Get Coding run coding courses at your school? <br> Fill in the form below and we'll get right back to you with more information on how we can get started.</p>
         <hr>
         <iframe class="center-block" width="440" height="480" src="form.html" scrolling="no"></iframe>
       </div>
-    </section>
+    </section> -->
     <footer>
       <div class="container">
         <ul class="list-inline">
@@ -144,7 +144,7 @@
         <p><small>&copy; 2015 Let's Get Coding.</small></p>
       </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
